# xiaoxuan-native-assembly

./: .gitignore  Cargo.toml  README.md
crates/assembler/: Cargo.toml
crates/assembler/src/: code_generator.rs  generator.rs  lib.rs  utils.rs
crates/assembler/tests/lib/: compile.sh  libtest0.c  test_function_indirect_call.c  test_import_data.c  test_import_function.c  test_import_tls_data.c  test_libc.c  test_thread_locals.c
docs/: xiaoxuan_native_assembly_cranelift_ir_map.ods
tests/examples/: example.x86_64-linux.anns  script.x86_64-linux.anns
